--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,6 @@ services:
     container_name: cvehub-backend
     ports:
       - "8000:8000"
-    environment:
-      - MONGODB_URL=mongodb://mongodb:27017
-      - DATABASE_NAME=cvehub
     volumes:
       - ./backend:/app
       - /app/__pycache__
@@ -47,9 +44,8 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend:/app
-      - /app/node_modules
     environment:
-      - REACT_APP_API_URL=http://localhost:8000/api
+      - REACT_APP_API_URL=http://localhost:8000
       - WDS_SOCKET_PORT=0
     depends_on:
       - backend
