--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,8 +9,9 @@ pydantic-settings==2.1.0
 email-validator==2.1.0.post1
 
 # MongoDB
-beanie==1.24.0
+beanie==1.22.6
 motor==3.3.2
+pymongo==4.5.0
 
 # WebSocket
 websockets==12.0
@@ -25,3 +26,5 @@ pytest-asyncio==0.23.5
 pytest-cov==4.1.0
 httpx==0.26.0
 coverage==7.4.1
+
+pytz
