--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.4",
+    "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.4",
     "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,11 +14,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
+    "jwt-decode": "^4.0.0",
+    "notistack": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
