--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,6 +20,11 @@ websockets==12.0
 python-dateutil==2.8.2
 aiohttp==3.9.1
 
+# Crawler
+GitPython==3.1.41
+PyYAML==6.0.1
+APScheduler==3.10.4
+
 # Testing
 pytest==8.0.0
 pytest-asyncio==0.23.5
