--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,17 @@
+# Database
 MONGODB_URL=mongodb://mongodb:27017
-MONGODB_DB_NAME=cvehub
-JWT_SECRET_KEY=your_jwt_secret_key_here
-JWT_ALGORITHM=HS256
-JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
+DATABASE_NAME=cvehub
+
+# JWT Settings
+SECRET_KEY=your-secret-key
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=60
+REFRESH_TOKEN_EXPIRE_DAYS=7
+
+# Timezone
+TZ=Asia/Seoul
+DATETIME_FORMAT=%Y-%m-%d %H:%M:%S
+TIMEZONE=Asia/Seoul
+
+# Crawler Settings
+REPO_PATH=/app/nuclei-templates
