--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,8 @@ services:
       - ./frontend:/app
       - ./frontend/node_modules:/app/node_modules
     environment:
-      - REACT_APP_API_URL=http://localhost:8000
+      - REACT_APP_API_URL=${SERVER_HOST:-http://localhost:8000}
+      - REACT_APP_WS_URL=${SERVER_WS_HOST:-ws://localhost:8000}
       - WDS_SOCKET_PORT=0
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
