--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,28 @@ services:
     networks:
       - cvehub-network
     healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongosh 10.0.7.200:27017/test --quiet
+      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
       interval: 10s
       timeout: 10s
       retries: 5
       start_period: 40s
+
+  redis:
+    image: redis:alpine
+    container_name: cvehub-redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+    networks:
+      - cvehub-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 3
+    restart: unless-stopped
 
   backend:
     build: 
@@ -33,8 +50,11 @@ services:
       - /usr/share/zoneinfo:/usr/share/zoneinfo:ro
     environment:
       - MONGODB_URL=mongodb://mongodb:27017/cvehub
+      - REDIS_URL=redis://redis:6379/0
     depends_on:
       mongodb:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     networks:
       - cvehub-network
@@ -51,8 +71,8 @@ services:
       - ./frontend:/app
       - ./frontend/node_modules:/app/node_modules
     environment:
-      - REACT_APP_API_URL=${SERVER_HOST:-http://10.0.7.200:8000}
-      - REACT_APP_WS_URL=${SERVER_WS_HOST:-ws://10.0.7.200:8000}
+      - REACT_APP_API_URL=${SERVER_HOST:-http://localhost:8000}
+      - REACT_APP_WS_URL=${SERVER_WS_HOST:-ws://localhost:8000}
       - WDS_SOCKET_PORT=0
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
@@ -64,6 +84,7 @@ services:
 
 volumes:
   mongodb_data:
+  redis_data:
 
 networks:
   cvehub-network:
