--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,9 +70,8 @@ services:
     volumes:
       - ./frontend:/app
       - ./frontend/node_modules:/app/node_modules
+      - ./frontend/.env:/app/.env
     environment:
-      - REACT_APP_API_URL=${SERVER_HOST:-http://localhost:8000}
-      - REACT_APP_WS_URL=${SERVER_WS_HOST:-ws://localhost:8000/ws}
       - WDS_SOCKET_PORT=0
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
