--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.13.4",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.4",
     "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.4",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.67.2",
+    "@tanstack/react-query-devtools": "^5.67.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "graphql": "^16.10.0",
     "jwt-decode": "^4.0.0",
     "notistack": "^3.0.2",
     "react": "^18.2.0",
@@ -25,6 +29,7 @@
     "react-toastify": "^9.1.3",
     "react-window": "^1.8.11",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
