--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,10 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^9.1.3",
     "react-window": "^1.8.11",
+    "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
