--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
     environment:
       - MONGODB_URL=mongodb://mongodb:27017/cvehub
       - REDIS_URL=redis://redis:6379/0
-      - TZ=Asia/Seoul
+      - TZ=UTC
     depends_on:
       mongodb:
         condition: service_healthy
