--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "graphql": "^16.10.0",
+    "humps": "^2.0.1",
     "jwt-decode": "^4.0.0",
     "notistack": "^3.0.2",
     "react": "^18.2.0",
