--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,7 +15,11 @@
       "isolatedModules": true,
       "noEmit": true,
       "jsx": "react-jsx",
-      "baseUrl": "src"
+      "baseUrl": "src",
+      "paths": {
+        "*": ["*", "*.ts", "*.tsx", "*.js", "*.jsx"]
+      },
+      "types": ["node"]
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "build"]
