--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@apollo/client": "^3.13.4",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -15,6 +16,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.24.5",
     "axios": "^1.6.5",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
