--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,8 +35,10 @@
     "react-window": "^1.8.11",
     "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
+    "rxjs": "^7.8.2",
     "socket.io-client": "^4.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
