--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,75 +1,77 @@
 {
-  "name": "cvehub-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ant-design/icons": "^6.0.0",
-    "@apollo/client": "^3.13.4",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.4",
-    "@mui/lab": "^5.0.0-alpha.165",
-    "@mui/material": "^5.15.4",
-    "@reduxjs/toolkit": "^2.5.0",
-    "@tanstack/react-query": "^5.67.2",
-    "@tanstack/react-query-devtools": "^5.67.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.24.5",
-    "axios": "^1.6.5",
-    "date-fns": "^4.1.0",
-    "date-fns-tz": "^3.2.0",
-    "graphql": "^16.10.0",
-    "humps": "^2.0.1",
-    "jwt-decode": "^4.0.0",
-    "lodash": "^4.17.21",
-    "notistack": "^3.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^6.21.2",
-    "react-scripts": "5.0.1",
-    "react-syntax-highlighter": "^15.6.1",
-    "react-toastify": "^9.1.3",
-    "react-window": "^1.8.11",
-    "recharts": "^2.15.1",
-    "redux-persist": "^6.0.0",
-    "rxjs": "^7.8.2",
-    "socket.io-client": "^4.8.1",
-    "web-vitals": "^2.1.4",
-    "zustand": "^5.0.3"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/node": "^22.13.12",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "typescript": "4.9.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "tsc:check": "tsc --noEmit"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "cvehub-frontend",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@ant-design/icons": "^6.0.0",
+        "@apollo/client": "^3.13.4",
+        "@emotion/react": "^11.11.3",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.15.4",
+        "@mui/lab": "^5.0.0-alpha.165",
+        "@mui/material": "^5.15.4",
+        "@mui/x-date-pickers": "^7.28.2",
+        "@reduxjs/toolkit": "^2.5.0",
+        "@tanstack/react-query": "^5.67.2",
+        "@tanstack/react-query-devtools": "^5.67.2",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "antd": "^5.24.5",
+        "axios": "^1.6.5",
+        "date-fns": "^2.29.3",
+        "date-fns-tz": "^1.3.7",
+        "graphql": "^16.10.0",
+        "humps": "^2.0.1",
+        "jwt-decode": "^4.0.0",
+        "lodash": "^4.17.21",
+        "notistack": "^3.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-helmet-async": "^2.0.5",
+        "react-redux": "^9.2.0",
+        "react-router-dom": "^6.21.2",
+        "react-scripts": "5.0.1",
+        "react-syntax-highlighter": "^15.6.1",
+        "react-toastify": "^9.1.3",
+        "react-window": "^1.8.11",
+        "recharts": "^2.15.1",
+        "redux-persist": "^6.0.0",
+        "rxjs": "^7.8.2",
+        "socket.io-client": "^4.8.1",
+        "web-vitals": "^2.1.4",
+        "zustand": "^5.0.3"
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@types/node": "^22.13.12",
+        "@types/react": "^19.0.12",
+        "@types/react-dom": "^19.0.4",
+        "typescript": "4.9.5"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "tsc:check": "tsc --noEmit"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
