--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,9 @@ TIMEZONE=Asia/Seoul
 
 # Crawler Settings
 REPO_PATH=/app/nuclei-templates
+
+# Redis Settings
+REDIS_URL=redis://redis:6379/0
+
+# Socket.IO Settings
+LOG_PING_PONG=false
